package com.telenav.fiasco.tools.compiler;

public class AntlrCompiler extends BaseCompiler
{
    @Override
    public void onRun()
    {

    }
}
