package com.telenav.fiasco.tools.compiler;

public class GrpcCompiler extends BaseCompiler
{
    @Override
    public void onRun()
    {

    }
}
