package com.telenav.fiasco.tools.compiler;

public class JavadocCompiler extends BaseCompiler
{
    @Override
    public void onRun()
    {

    }
}
