package com.telenav.fiasco.tools.compiler;

public class LexakaiCompiler extends BaseCompiler
{
    @Override
    public void onRun()
    {

    }
}
