package com.telenav.fiasco.tools.compiler;

public class ProtobufCompiler extends BaseCompiler
{
    @Override
    public void onRun()
    {

    }
}
