@startuml
'https://plantuml.com/class-diagram

!include lexakai.theme

title "Tools"

top to bottom direction

package fiasco.tools
{
    interface Tool
}

package fiasco.tools.resource
{
    interface ResourceTool
    ResourceTool -u-|> Tool
}

package fiasco.tools.compiler
{
    interface Compiler
    Compiler -u-|> ResourceTool

    class AntlrCompiler
    class GrpcCompiler
    class JavaCompiler
    class JavadocCompiler
    class LexakaiCompiler
    class ProtobufCompiler

    AntlrCompiler    -u-|> Compiler
    GrpcCompiler     -u-|> Compiler
    JavaCompiler     -u--|> Compiler
    JavadocCompiler  -u--|> Compiler
    LexakaiCompiler  -u---|> Compiler
    ProtobufCompiler -u---|> Compiler
}

@enduml

